Fixed treeview in nautilus so text is always visible.
Text in treeview was only partially visible. Text under columns were not always visible, especially with darker variants of the theme.

--- a/common/gtk/_sass/apps/_nautilus.scss
+++ b/common/gtk/_sass/apps/_nautilus.scss
@@ -89,7 +89,9 @@
         }
     }
 
-   
+   treeview {
+       color:$textfg;
+   }
 
     scrolledwindow {
         border-width: 5px;
